devops/k8s/webserver/deployment.dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: webserver-deployment
    labels:
        app: webserver
spec:
    replicas: 1
    selector:
        matchLabels:
            app: webserver
    template:
        metadata:
            labels:
                app: webserver
        spec:
            containers:
                - name: webserver-container
                  image: bazel/devops/docker/webserver:docker_webserver
                  imagePullPolicy: Never
                  ports:
                    - containerPort: 8080
                - name: nginx-container
                  image: bazel/devops/docker/nginx:nginx
                  imagePullPolicy: Never
                  ports:
                    - containerPort: 80
