devops/k8s/webserver/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
    name: external-webserver-service
    labels:
        app: webserver
spec:
    ports:
        - port: 80
          protocol: TCP
          targetPort: 80
    type: LoadBalancer
    selector:
        app: webserver
