devops/k8s/webserver/service.prod.yaml
apiVersion: v1
kind: Service
metadata:
    name: internal-webserver-service
    labels:
        app: webserver
    annotations:
        beta.cloud.google.com/backend-config: '{"ports": {"80": "webserver-backendconfig"}}'
spec:
    type: NodePort
    ports:
        - port: 80
          protocol: TCP
    selector:
        app: webserver
