devops/k8s/webserver/ingress.staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: external-webserver-service
    annotations:
        kubernetes.io/ingress.global-static-ip-name: webserver-static-ip
        cert-manager.io/cluster-issuer: letsencrypt-prod
        acme.cert-manager.io/http01-edit-in-place: "true"
    labels:
        app: webserver
spec:
    rules:
        - http:
            paths:
                - backend:
                    serviceName: internal-webserver-service
                    servicePort: 443
    tls:
        - hosts:
            - "staging.grchive.com"
          secretName: grchive-cert-prod
